my first personal website

--- a/index.html
+++ b/index.html
@@ -8,17 +8,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h2>Hello I'm</h2>
             <h1> <span class="name-highlight">Rayhan Mahmud</span></h1>
             <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</h4>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdrayhanmahmud-1a2525154/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/peter.png" alt="">
         </div>
     </section>
-    
-</body>
-</html>
+    <section class="my-biography">
+        <div class="half-width">
+             <img src="images/peter_dream.png" alt="">
 
+        </div>
+        <div class="half-width">
+            <h2>Biography</h2>
+            <H4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</h4>
+            <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</H4>
+            <a class="link-button" target="_blank" ref="https://www.linkedin.com/in/mdrayhanmahmud-1a2525154/">DOWNLOAD CV</a>
+        </div>
+    </section>
+    <section class="latest-work-area" >
+        <h2>My latest work</h2> 
+        <div>
+            <img src="images/latest-work/work-1.png" alt="">
+        </div>
+        <div>
+            <img src="images/latest-work/work-2.jpg" alt="">
+        </div>
+        <div>
+            <img src="images/latest-work/work-3.jpg" alt="">
+        </div>
+    </section>
+    <section class="client-review">
+            <h2>What Client are say</h2>
+            <h4>Bruce Moccy</h4>
+            <p class="founder">Founder & CEO Alies</p>
+            <p class="client-reviews-ditales">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore adipisci itaque laboriosam, voluptatum ipsum neque.</p>
+            <a class="contact" target="_blank" ref="raihan.uddin1111@gmail.com">raihan.uddin1111@gmail.com</a>
+    </section>
+</body>
+<footer class="footer-area">
+    <p>@ Rayhan Mahmud 2020, all rights reserved</p>
+</footer>
+</html>
